# chatgpt-api

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  key.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
aichat/: __main__.py  chat.py  config.py
chatgpt/: __init__.py  __main__.py  api.py  browser.py  cli.py  config.py  const.py  exceptions.py  logger.py  payloads.py  test.py
tests/: conftest.py  test_api.py  test_api_authentication.py  test_api_send_message.py  test_cli.py  valid_response_test_data.txt
