[metadata]
name = chatgpt-api
version = 0.1.1
description = ChatGPT HTTP API Client with CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mbroton/chatgpt-api
author = Michal Broton
author_email = michal@broton.dev
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    httpx==0.23.1
    typer[all] == 0.7.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    chatgpt = chatgpt.cli:main
